--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-BOT_TOKEN=5424991242:AAGwomxQz1p46bRi_2m3V7kvJlt5RjK9xr0
-ADMIN_IDS=173901673
+BOT_TOKEN=<token_from_BotFather>
+ADMIN_IDS=<user_id>
+SALUTE_CREDENTIALS=<Authorization_key>
