Comment: Preparing for deployment to amvera. Changes: - update voice_handlers.py, user_handlers.py - changes for main.py, config.py - updated .env.example - added requirements.txt - removed herobrine

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 BOT_TOKEN=<token_from_BotFather>
 ADMIN_IDS=<user_id>
 SALUTE_CREDENTIALS=<Authorization_key>
+DATABASE_URL=<postgresql+psycopg2://postgres:1234@localhost:1234/Name_DB>
+SALUTE_CREDENTIALS=<CREDENTIALS>
+YANDEX_IAM_TOKEN=<IAM_TOKEN>
+YANDEX_FOLDER_ID=<FOLDER_ID>
